[HarryPotterApiDemo]: Added the list and detail functional and Ui codes

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,25 +2,19 @@
 agp = "8.5.2"
 kotlin = "1.9.0"
 hilt = "2.49"
-
 activityCompose = "1.9.2"
 composeBom = "2024.09.02"
 coreKtx = "1.13.1"
 lifecycleRuntimeKtx = "2.8.6"
 materialVersion = "1.7.2"
-
 retrofit = "2.9.0"
 converter-gson = "2.9.0"
-
 hilt-android = "2.49"
 hilt-compiler = "2.49"
 hilt-navigation-compose = "1.2.0"
-
 coil-compose = "2.3.0"
-
 serialization = "1.6.3"
 composeNavigation = "2.8.1"
-
 espressoCore = "3.6.1"
 junitVersion = "1.2.1"
 junit = "4.13.2"
@@ -31,6 +25,8 @@ kotlinx-coroutines-test = "1.7.1"
 turbineVersion = "0.11.0"
 appcompat = "1.7.0"
 material = "1.12.0"
+lottieVersion = "6.5.2"
+uiToolingPreview = "1.7.2"
 
 
 [libraries]
@@ -70,7 +66,8 @@ kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-cor
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbineVersion" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-
+lottie = { module = "com.airbnb.android:lottie-compose", name = "lottie", version.ref = "lottieVersion" }
+ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
